# itchamps

./: .gitignore  ARCHITECTURE.md  CHATBOT_OVERVIEW.md  FORCE_NAVBAR_UPDATE.md  GITHUB_INTEGRATION_SUMMARY.md  INSTALLATION_COMPLETE.md  INSTALLATION_FIX.md  MANIFEST.in  NAVBAR_UPDATE.md  QUICK_START.md  README.md  README_GITHUB_SETUP.md  ROLE_BASED_ACCESS_FIX.md  TROUBLESHOOTING.md  URGENT_FIX_STEPS.md  demo_chatbot.py  fix_rbac.py  hooks.py  install_github_integration.bat  install_github_integration.sh  license.txt  preview.html  pyproject.toml  requirements.txt  setup.py  test_anthropic_api.py  test_chatbot.py  test_chatbot_backend.py  test_github_integration.py
itchamps/: __init__.py  debug_employee.py  hooks.py  modules.txt  patches.txt
itchamps/api/: auth_service.py  chatbot.py  constants.py  debug_context.py  debug_employee_link.py  github_helper.py  llm_service.py  nlu.py  test_auth.py  test_nlu.py
itchamps/config/: __init__.py
itchamps/itchamps/doctype/chatbot_settings/: chatbot_settings.js  chatbot_settings.json  chatbot_settings.py
itchamps/prompts/: admin_prompts.md  employee_prompts.md  hr_prompts.md
itchamps/public/css/: chatbot.css  itchamps_theme.css  sidebar_navigation.css
itchamps/public/images/: .gitkeep  README.md
itchamps/public/js/: chatbot.js  chatbot_ui.js  hide_chat_on_login.js  sidebar_navigation_enhanced.js
