[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itchamps"
authors = [
    {name = "Your Company", email = "info@itchamps.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.10"
dependencies = [
    "frappe"
]