[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itchamps"
version = "0.0.1"
description = "ITChamps HR Management with AI Chatbot"
authors = [
    {name = "ITChamps", email = "info@itchamps.com"}
]
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[project.urls]
Homepage = "https://github.com/Nusrath02/itchamps"
Repository = "https://github.com/Nusrath02/itchamps.git"